# expense-tracker

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  env.template  expense-tracker-db.drawio  plan.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 7743a58992f6_initial_migration.py  e7805b27a0d1_minor_updates_to_db.py
backend/app/: database.py  main.py  models.py
backend/app/auth/: dependencies.py  jwt.py  oauth.py
backend/app/config/: logging.py  settings.py
backend/app/db/: database.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 7743a58992f6_initial_migration.py  a1b2c3d4e5f6_add_oauth_fields_to_user.py  e7805b27a0d1_minor_updates_to_db.py
backend/app/models/: currency.py  expenses.py
backend/app/routers/: auth.py  categories.py  expenses.py
backend/app/schemas/: auth.py  categories.py  expenses.py
scripts/: seed_categories.py  start-prod.sh  start.sh
tests/: conftest.py  test_expenses_endpoints.py
