[project]
name = "expense-tracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.1",
    "black>=25.1.0",
    "fastapi[standard]>=0.115.8",
    "isort>=6.0.0",
    "mypy>=1.14.1",
    "psycopg2-binary>=2.9.10",
    "pylint>=3.3.4",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.4",
    "sqlalchemy>=2.0.37",
]
