[project]
name = "expense-tracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.1",
    "authlib>=1.3.0",
    "black>=25.1.0",
    "fastapi[standard]>=0.115.8",
    "httpx>=0.24.0",
    "isort>=6.0.0",
    "itsdangerous>=2.1.2",
    "mypy>=1.14.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "pylint>=3.3.4",
    "python-dotenv>=1.0.1",
    "python-json-logger>=2.0.7",
    "pyjwt[cryptography]>=2.8.0",
    "python-multipart>=0.0.6",
    "ruff>=0.9.4",
    "sqlalchemy>=2.0.37",
]
